--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://default_user1:ademiro@cluster0.wecbzg0.mongodb.net/spring
-
+server.address=0.0.0.0
 server.port=${PORT:8080}
